jlamontSC-test/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Account_Number__c</fullName>
        <description>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</description>
        <inlineHelpText>This field is only used for data import when the value for the account number is known, but the account ID is not known but the external system.</inlineHelpText>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Update_Summaries_Age__c</fullName>
        <formula>MAX(0, LastModifiedDate - BLANKVALUE(Account.rC_Giving__Update_Summaries__c, NOW()))</formula>
        <label>Account: Update Summaries Age</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged_Date__c</fullName>
        <description>Date Acknowledgement sent</description>
        <inlineHelpText>Date Acknowledgement sent</inlineHelpText>
        <label>Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an acknowledgement been sent?</description>
        <inlineHelpText>Has an acknowledgement been sent?</inlineHelpText>
        <label>Acknowledged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Activity_Type__c</fullName>
        <description>Defines type of Activity associated with gift. Mirrors the Giving record type.</description>
        <inlineHelpText>Defines type of Activity associated with gift. Mirrors the Giving record type.</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Inkind</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</description>
        <inlineHelpText>Represents groups within the organization. Each Affiliation has its own Summary record on Account.</inlineHelpText>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sierra Club</fullName>
                    <default>true</default>
                    <label>Sierra Club</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Allocation_Amount__c</fullName>
        <description>Amount that has currently been allocated to different Accounting Units</description>
        <inlineHelpText>Amount that has currently been allocated to different Accounting Units</inlineHelpText>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Allocation_Model__c</fullName>
        <description>Defines method and complexity for Allocation Splits. All options go to different functionality related to Allocations.</description>
        <inlineHelpText>Defines how Allocation are split from pledge to transactions.</inlineHelpText>
        <label>Allocation Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Date__c</fullName>
        <description>Automatically populated &quot;Anniversary Date&quot; of membership period.  Field is  set to Close date for sustainers.</description>
        <inlineHelpText>Anniversary Date of membership period.</inlineHelpText>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Anniversary_Renewal_Date__c</fullName>
        <description>Auto populated, this is the next upcoming anniversary date of the sustainer and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.  The field is set to Close date + 1 year for sustainers.</description>
        <inlineHelpText>This is the next upcoming anniversary date of the sustainer, and will be the date when new premiums are scheduled and shipped based on the sustainer&apos;s Giving Level.</inlineHelpText>
        <label>Anniversary Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Annual_Giving_Amount__c</fullName>
        <description>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</description>
        <inlineHelpText>Annual Giving Amount is the calculated amount the donor will give from the time period of the most recent Anniversary Date to the most recent Anniversary Date + 1 year</inlineHelpText>
        <label>Annual Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_Deadline__c</fullName>
        <description>Deadline to submit application.</description>
        <inlineHelpText>Deadline to submit application.</inlineHelpText>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Application_ID__c</fullName>
        <description>Internal ID for the Application.</description>
        <inlineHelpText>Internal ID for the Application.</inlineHelpText>
        <label>Application ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Ask_Readiness__c</fullName>
        <description>Disposition of constituent toward committing to determined Pledge ask amount.</description>
        <inlineHelpText>Disposition of constituent toward committing to determined Pledge ask amount.</inlineHelpText>
        <label>Ask Readiness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Available_Billing_Date__c</fullName>
        <description>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</description>
        <inlineHelpText>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</inlineHelpText>
        <label>Available Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_End_Date__c</fullName>
        <description>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</description>
        <inlineHelpText>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</inlineHelpText>
        <label>Awarded Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_Start_Date__c</fullName>
        <description>Date grant related projects/programs end.</description>
        <inlineHelpText>Date grant related projects/programs end.</inlineHelpText>
        <label>Awarded Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of the amounts you are likely to close per your Giving Stage configuration.</description>
        <inlineHelpText>Aggregated sum of the amounts you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10,  MIN(150, rC_Giving__Best_Case_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Best_Case_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Best_Case_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Best_Case_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Calculated_Giving_Type__c</fullName>
        <description>Giving Type determined by roundCause rules for the specified giving type engine.</description>
        <inlineHelpText>Giving Type determined by roundCause rules for the specified giving type engine.</inlineHelpText>
        <label>Calculated Giving Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Additional</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Rejoin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Channel__c</fullName>
        <description>Automatically set to the related Campaign Channel value. This functionality can be controlled by custom setting.</description>
        <inlineHelpText>Defines a value which is automatically set to the related Campaign Channel value.</inlineHelpText>
        <label>Campaign Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Response_Mechanism__c</fullName>
        <description>Formula field indicating how Campaign response is expected to come in.</description>
        <formula>TEXT(Campaign.rC_Giving__Response_Mechanism__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How Campaign response is expected to come in.</inlineHelpText>
        <label>Campaign: Response Mechanism</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Rollup_Giving_Age__c</fullName>
        <formula>MAX(0, LastModifiedDate - BLANKVALUE(Campaign.rC_Giving__Rollup_Giving__c, NOW()))</formula>
        <label>Campaign: Rollup Giving Age</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Source_Code__c</fullName>
        <description>Formula field displaying the &quot;Source Code&quot; of Campaign as generated by rules defined in the Source Codes configuration.</description>
        <formula>Campaign.rC_Giving__Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</inlineHelpText>
        <label>Campaign: Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Support_Designation__c</fullName>
        <description>Formula field from Campaign object reflecting general designation where pledge or funds are to be applied.</description>
        <formula>TEXT(Campaign.rC_Giving__Support_Designation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>General designation where pledge or funds are to be applied.</inlineHelpText>
        <label>Campaign: Support Designation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Charitable_Deduction__c</fullName>
        <description>Calculated Charitable Deduction for Planned Giving.</description>
        <inlineHelpText>Calculated Charitable Deduction for Planned Giving.</inlineHelpText>
        <label>Charitable Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Date__c</fullName>
        <description>Auto populated check date used to pay a Giving Transaction.</description>
        <inlineHelpText>Check Date used to pay a Giving Transaction.</inlineHelpText>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Number__c</fullName>
        <description>Automatically populated check number used to pay a Giving Transaction.</description>
        <inlineHelpText>Check number used to pay a Giving Transaction.</inlineHelpText>
        <label>Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Close_Date_Time__c</fullName>
        <description>Populated by trigger, indicates the close date and time of the Giving record.</description>
        <inlineHelpText>Close date and time of the Giving record.</inlineHelpText>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount__c</fullName>
        <description>Includes amounts for completed transactions. See the Giving Stage configuration for more details.</description>
        <inlineHelpText>Includes amounts for completed transactions. See the Giving Stage configuration for more details.</inlineHelpText>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Bar__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Closed_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Closed_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Closed_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of completed transactions related to this Giving record.</inlineHelpText>
        <label>Closed Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Lost_Reason__c</fullName>
        <description>Reason the Giving is listed Closed Lost.</description>
        <inlineHelpText>Reason the Giving is listed Closed Lost.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Cut</fullName>
                </value>
                <value>
                    <fullName>GAU Changed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Duplicate Gift Proposal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Ratio__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Closed_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of completed transactions related to this Giving record.</inlineHelpText>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Comments__c</fullName>
        <description>Holds Comments related to Tribute information on a Giving record.</description>
        <inlineHelpText>Holds Comments related to Tribute information on a Giving record.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of Giving Transactions  you are confident about closing.</description>
        <inlineHelpText>Aggregated sum of the Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Commit_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Commit_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Commit_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Commit_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Concept_Paper_Deadline__c</fullName>
        <description>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</description>
        <inlineHelpText>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</inlineHelpText>
        <label>Concept Paper Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Number__c</fullName>
        <description>Internal reference of the signed contract with donor.</description>
        <inlineHelpText>Internal reference of the signed contract with donor.</inlineHelpText>
        <label>Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Status__c</fullName>
        <description>Status of the Grant Contract.</description>
        <inlineHelpText>Status of the Grant Contract.</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <inlineHelpText>Sum of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Bar__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(rC_Giving__Current_Giving_Divergence__c &gt;= 0, IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Current_Giving_Divergence__c)) + &apos; &apos; + TEXT(rC_Giving__Current_Giving_Divergence__c) + &apos;% over expected&apos;, IF(rC_Giving__Current_Giving_Divergence__c &gt; -25, IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;, IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Divergence__c</fullName>
        <description>Formula field providing the divergence of the &quot;Current Giving Amount&quot; from the &quot;Expected Giving Amount.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, CEILING(100 * (BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) - rC_Giving__Expected_Giving_Amount__c) / rC_Giving__Expected_Giving_Amount__c))</formula>
        <inlineHelpText>Divergence of the &quot;Current Giving Amount&quot; from the &quot;Expected Giving Amount.</inlineHelpText>
        <label>Current Giving Divergence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Ratio__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <inlineHelpText>Percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Direct_Debit_Customer_Code__c</fullName>
        <description>Stores the customer code received from iATS payment processor after creation of Direct Debit recurring payment.</description>
        <inlineHelpText>Stores the customer code received from iATS payment processor after creation of Direct Debit recurring payment.</inlineHelpText>
        <label>Direct Debit Customer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Month__c</fullName>
        <description>Month in which latest Discount Rate was populated.</description>
        <inlineHelpText>Month in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Year__c</fullName>
        <description>Year in which latest Discount Rate was populated.</description>
        <inlineHelpText>Year in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate__c</fullName>
        <description>Manually populated, this field indicates an interest rate a central bank charges depository institutions that borrow reserves from it.</description>
        <inlineHelpText>Interest rate a central bank charges depository institutions that borrow reserves from it.</inlineHelpText>
        <label>Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Effective_Giving_Type_Date__c</fullName>
        <description>Formula field providing the &quot;Effective Giving Type Date&quot;.</description>
        <formula>IF(NOT(rC_Giving__Is_Giving__c), CloseDate,
IF(Not($Setup.rC_Giving__Giving_Level_Setting__c.rC_Giving__Active_Only_On_Payment__c), CloseDate,
IF(NOT(ISBLANK(rC_Giving__First_Closed_Payment_Date__c)), rC_Giving__First_Closed_Payment_Date__c,
IF(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level__c), CloseDate,
IF(NOT(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c)), rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c + 1,
rC_Giving__Summary__r.rC_Giving__Giving_Level_Pending_Date__c)))))</formula>
        <inlineHelpText>Formula field providing the &quot;Effective Giving Type Date.</inlineHelpText>
        <label>Effective Giving Type Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Enrollment_Start_Date__c</fullName>
        <description>Manually populated field on a Grant record indicating when an Awardee may enroll in  grant program.</description>
        <inlineHelpText>On a Grant record, indicates when an Awardee may enroll in a grant program.</inlineHelpText>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Amount__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving amount.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving amount.</inlineHelpText>
        <label>Entered Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency_Rate__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency rate.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency rate.</inlineHelpText>
        <label>Entered Giving Currency Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency code.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency code.</inlineHelpText>
        <label>Entered Giving Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount__c</fullName>
        <description>Populated by trigger, displays the sum of all Expected Giving Amounts.</description>
        <inlineHelpText>Sum of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>